# nomos-data-analysis

./: .gitignore  0_plot_reference_profiles.py  1_clean_files.sh  1_ingest_vemmis.py  2_combine_months.py  2_extract_features.py  3_classify_nadp.py  3_classify_nadp_2profiles.py  3_extract_nadp_segments.py  3b_classify_nadp_subtypes.py  4_classify_nadp_4profiles.py  4_nadp_matching.py  4_nadp_matching_results.md  main.py  pyproject.toml  readme.md  report.md
misc/: convert_md_to_docx.py
